--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "black>=25.9.0",
     "isort>=6.0.1",
+    "langchain-core>=0.3.76",
+    "langchain-ollama>=0.3.8",
     "langchain-openai>=0.3.33",
     "python-dotenv>=1.1.1",
 ]
